--- a/app/views/sweets/index.html.erb
+++ b/app/views/sweets/index.html.erb
@@ -1,7 +1,7 @@
 <h1>All Sweets</h1>
-
+<%= button_to "Add new sweet", new_sweet_path, method: :get %>
 <ul>
   <% @sweets.each do |sweet| %>
-    <li><%= sweet.name %></li>
+    <li><%= link_to sweet.name, sweet_path(sweet) %></li>
   <% end  %>
 </ul>
